--- a/src/Effect.Fail.html
+++ b/src/Effect.Fail.html
@@ -7,12 +7,13 @@
 </span><span id="line-7"></span><span class="hs-pragma">{-# LANGUAGE ScopedTypeVariables #-}</span><span>
 </span><span id="line-8"></span><span class="hs-pragma">{-# LANGUAGE TemplateHaskell #-}</span><span>
 </span><span id="line-9"></span><span class="hs-pragma">{-# LANGUAGE TypeApplications #-}</span><span>
-</span><span id="line-10"></span><span>
-</span><span id="line-11"></span><span class="hs-keyword">module</span><span> </span><span class="hs-identifier">Effect.IO</span><span> </span><span class="hs-keyword">where</span><span>
-</span><span id="line-12"></span><span>
-</span><span id="line-13"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><span class="hs-identifier">Control.Monad.IO.Class</span></span><span>
+</span><span id="line-10"></span><span class="hs-pragma">{-# OPTIONS_GHC -Wno-orphans #-}</span><span>
+</span><span id="line-11"></span><span>
+</span><span id="line-12"></span><span class="hs-keyword">module</span><span> </span><span class="hs-identifier">Effect.Fail</span><span> </span><span class="hs-keyword">where</span><span>
+</span><span id="line-13"></span><span>
 </span><span id="line-14"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><a href="Effect.TH.html"><span class="hs-identifier">Effect.TH</span></a></span><span>
 </span><span id="line-15"></span><span>
-</span><span id="line-16"></span><span id="local-6989586621679167803"><span id="MonadIOEffect"><span id="local-6989586621679167813"><span id="LiftIO"><span class="hs-identifier">defineEffectType</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadIO</span></span></span></span></span><span>
-</span><span id="line-17"></span><span id="local-6989586621679167821"><span id="local-6989586621679167822"><span id="local-6989586621679167833"><span id="local-6989586621679167842"><span class="hs-identifier">makeEffect</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadIO</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadIOEffect</span></span></span></span></span><span>
-</span><span id="line-18"></span></pre></body></html>
+</span><span id="line-16"></span><span id="local-6989586621679167901"><span id="MonadFailEffect"><span id="local-6989586621679167910"><span id="Fail"><span class="hs-identifier">defineEffectType</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadFail</span></span></span></span></span><span>
+</span><span id="line-17"></span><span>
+</span><span id="line-18"></span><span id="local-6989586621679167918"><span id="local-6989586621679167919"><span id="local-6989586621679167930"><span id="local-6989586621679167939"><span class="hs-identifier">makeEffect</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadFail</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadFailEffect</span></span></span></span></span><span>
+</span><span id="line-19"></span></pre></body></html>
