deploy: fe9310135a01a78fa3e5920c5b841d67197fdfdc

--- a/src/Effect.Error.html
+++ b/src/Effect.Error.html
@@ -8,12 +8,13 @@
 </span><span id="line-8"></span><span class="hs-pragma">{-# LANGUAGE TemplateHaskell #-}</span><span>
 </span><span id="line-9"></span><span class="hs-pragma">{-# LANGUAGE TypeApplications #-}</span><span>
 </span><span id="line-10"></span><span class="hs-pragma">{-# LANGUAGE UndecidableInstances #-}</span><span>
-</span><span id="line-11"></span><span>
-</span><span id="line-12"></span><span class="hs-keyword">module</span><span> </span><span class="hs-identifier">Effect.Error</span><span> </span><span class="hs-keyword">where</span><span>
-</span><span id="line-13"></span><span>
-</span><span id="line-14"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><span class="hs-identifier">Control.Monad.Except</span></span><span>
-</span><span id="line-15"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><a href="Effect.TH.html"><span class="hs-identifier">Effect.TH</span></a></span><span>
-</span><span id="line-16"></span><span>
-</span><span id="line-17"></span><span id="local-6989586621679193287"><span id="local-6989586621679193288"><span id="MonadErrorEffect"><span id="local-6989586621679193299"><span id="local-6989586621679193300"><span id="ThrowError"><span id="CatchError"><span class="hs-identifier">defineEffectType</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadError</span></span></span></span></span></span></span></span><span>
-</span><span id="line-18"></span><span id="local-6989586621679193300"><span id="local-6989586621679193308"><span id="local-6989586621679193309"><span id="local-6989586621679193325"><span id="local-6989586621679193335"><span id="local-6989586621679193338"><span class="hs-identifier">makeEffect</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadError</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadErrorEffect</span></span></span></span></span></span></span><span>
-</span><span id="line-19"></span></pre></body></html>
+</span><span id="line-11"></span><span class="hs-pragma">{-# OPTIONS_GHC -Wno-orphans #-}</span><span>
+</span><span id="line-12"></span><span>
+</span><span id="line-13"></span><span class="hs-keyword">module</span><span> </span><span class="hs-identifier">Effect.Error</span><span> </span><span class="hs-keyword">where</span><span>
+</span><span id="line-14"></span><span>
+</span><span id="line-15"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><span class="hs-identifier">Control.Monad.Except</span></span><span>
+</span><span id="line-16"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><a href="Effect.TH.html"><span class="hs-identifier">Effect.TH</span></a></span><span>
+</span><span id="line-17"></span><span>
+</span><span id="line-18"></span><span id="local-6989586621679146492"><span id="local-6989586621679146493"><span id="MonadErrorEffect"><span id="local-6989586621679146504"><span id="local-6989586621679146505"><span id="ThrowError"><span id="CatchError"><span class="hs-identifier">defineEffectType</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadError</span></span></span></span></span></span></span></span><span>
+</span><span id="line-19"></span><span id="local-6989586621679146505"><span id="local-6989586621679146513"><span id="local-6989586621679146514"><span id="local-6989586621679146530"><span id="local-6989586621679146540"><span id="local-6989586621679146543"><span class="hs-identifier">makeEffect</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadError</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadErrorEffect</span></span></span></span></span></span></span><span>
+</span><span id="line-20"></span></pre></body></html>
