--- a/src/Effect.State.html
+++ b/src/Effect.State.html
@@ -8,12 +8,13 @@
 </span><span id="line-8"></span><span class="hs-pragma">{-# LANGUAGE TemplateHaskell #-}</span><span>
 </span><span id="line-9"></span><span class="hs-pragma">{-# LANGUAGE TypeApplications #-}</span><span>
 </span><span id="line-10"></span><span class="hs-pragma">{-# LANGUAGE UndecidableInstances #-}</span><span>
-</span><span id="line-11"></span><span>
-</span><span id="line-12"></span><span class="hs-keyword">module</span><span> </span><span class="hs-identifier">Effect.State</span><span> </span><span class="hs-keyword">where</span><span>
-</span><span id="line-13"></span><span>
-</span><span id="line-14"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><span class="hs-identifier">Control.Monad.State</span></span><span>
-</span><span id="line-15"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><a href="Effect.TH.html"><span class="hs-identifier">Effect.TH</span></a></span><span>
-</span><span id="line-16"></span><span>
-</span><span id="line-17"></span><span id="local-6989586621679193009"><span id="MonadStateEffect"><span id="local-6989586621679193020"><span id="local-6989586621679193021"><span id="Get"><span id="Put"><span id="State"><span class="hs-identifier">defineEffectType</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadState</span></span></span></span></span></span></span></span><span>
-</span><span id="line-18"></span><span id="local-6989586621679193021"><span id="local-6989586621679193030"><span id="local-6989586621679193031"><span id="local-6989586621679193052"><span id="local-6989586621679193063"><span id="local-6989586621679193066"><span id="local-6989586621679193069"><span class="hs-identifier">makeEffect</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadState</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadStateEffect</span></span></span></span></span></span></span></span><span>
-</span><span id="line-19"></span></pre></body></html>
+</span><span id="line-11"></span><span class="hs-pragma">{-# OPTIONS_GHC -Wno-orphans #-}</span><span>
+</span><span id="line-12"></span><span>
+</span><span id="line-13"></span><span class="hs-keyword">module</span><span> </span><span class="hs-identifier">Effect.State</span><span> </span><span class="hs-keyword">where</span><span>
+</span><span id="line-14"></span><span>
+</span><span id="line-15"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><span class="hs-identifier">Control.Monad.State</span></span><span>
+</span><span id="line-16"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><a href="Effect.TH.html"><span class="hs-identifier">Effect.TH</span></a></span><span>
+</span><span id="line-17"></span><span>
+</span><span id="line-18"></span><span id="local-6989586621679146214"><span id="MonadStateEffect"><span id="local-6989586621679146225"><span id="local-6989586621679146226"><span id="Get"><span id="Put"><span id="State"><span class="hs-identifier">defineEffectType</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadState</span></span></span></span></span></span></span></span><span>
+</span><span id="line-19"></span><span id="local-6989586621679146226"><span id="local-6989586621679146235"><span id="local-6989586621679146236"><span id="local-6989586621679146257"><span id="local-6989586621679146268"><span id="local-6989586621679146271"><span id="local-6989586621679146274"><span class="hs-identifier">makeEffect</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadState</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadStateEffect</span></span></span></span></span></span></span></span><span>
+</span><span id="line-20"></span></pre></body></html>
