--- a/src/Effect.Writer.html
+++ b/src/Effect.Writer.html
@@ -8,12 +8,13 @@
 </span><span id="line-8"></span><span class="hs-pragma">{-# LANGUAGE TemplateHaskell #-}</span><span>
 </span><span id="line-9"></span><span class="hs-pragma">{-# LANGUAGE TypeApplications #-}</span><span>
 </span><span id="line-10"></span><span class="hs-pragma">{-# LANGUAGE UndecidableInstances #-}</span><span>
-</span><span id="line-11"></span><span>
-</span><span id="line-12"></span><span class="hs-keyword">module</span><span> </span><span class="hs-identifier">Effect.Writer</span><span> </span><span class="hs-keyword">where</span><span>
-</span><span id="line-13"></span><span>
-</span><span id="line-14"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><span class="hs-identifier">Control.Monad.Writer</span></span><span>
-</span><span id="line-15"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><a href="Effect.TH.html"><span class="hs-identifier">Effect.TH</span></a></span><span>
-</span><span id="line-16"></span><span>
-</span><span id="line-17"></span><span id="local-6989586621679193690"><span id="local-6989586621679193691"><span id="local-6989586621679193692"><span id="MonadWriterEffect"><span id="local-6989586621679193703"><span id="local-6989586621679193704"><span id="Writer"><span id="Tell"><span id="Listen"><span id="Pass"><span class="hs-identifier">defineEffectType</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadWriter</span></span></span></span></span></span></span></span></span></span></span><span>
-</span><span id="line-18"></span><span id="local-6989586621679193703"><span id="local-6989586621679193715"><span id="local-6989586621679193716"><span id="local-6989586621679193739"><span id="local-6989586621679193754"><span id="local-6989586621679193757"><span id="local-6989586621679193760"><span id="local-6989586621679193763"><span class="hs-identifier">makeEffect</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadWriter</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadWriterEffect</span></span></span></span></span></span></span></span></span><span>
-</span><span id="line-19"></span></pre></body></html>
+</span><span id="line-11"></span><span class="hs-pragma">{-# OPTIONS_GHC -Wno-orphans #-}</span><span>
+</span><span id="line-12"></span><span>
+</span><span id="line-13"></span><span class="hs-keyword">module</span><span> </span><span class="hs-identifier">Effect.Writer</span><span> </span><span class="hs-keyword">where</span><span>
+</span><span id="line-14"></span><span>
+</span><span id="line-15"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><span class="hs-identifier">Control.Monad.Writer</span></span><span>
+</span><span id="line-16"></span><span class="hs-keyword">import</span><span> </span><span class="annot"><a href="Effect.TH.html"><span class="hs-identifier">Effect.TH</span></a></span><span>
+</span><span id="line-17"></span><span>
+</span><span id="line-18"></span><span id="local-6989586621679146895"><span id="local-6989586621679146896"><span id="local-6989586621679146897"><span id="MonadWriterEffect"><span id="local-6989586621679146908"><span id="local-6989586621679146909"><span id="Writer"><span id="Tell"><span id="Listen"><span id="Pass"><span class="hs-identifier">defineEffectType</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadWriter</span></span></span></span></span></span></span></span></span></span></span><span>
+</span><span id="line-19"></span><span id="local-6989586621679146908"><span id="local-6989586621679146920"><span id="local-6989586621679146921"><span id="local-6989586621679146944"><span id="local-6989586621679146959"><span id="local-6989586621679146962"><span id="local-6989586621679146965"><span id="local-6989586621679146968"><span class="hs-identifier">makeEffect</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadWriter</span><span> </span><span class="hs-special">''</span><span class="hs-identifier">MonadWriterEffect</span></span></span></span></span></span></span></span></span><span>
+</span><span id="line-20"></span></pre></body></html>
